# actor

./: .gitignore  CMakeLists.txt  simple_test.cc
include/: actor.h  actor_start.h  basic.h  context.h  handle.h  message.h  message_queue.h  name_service.h
src/: actor.cc  actor_start.cc  context.cc  handle.cc  message_queue.cc
